(feat): apis reset-password and forgot-password
