# routes/api.php
@@ -21,4 +21,6 @@ Route::group([
 ], function ($router) {
     Route::post('/register', [UserController::class,'register']);
     Route::post('/login', [UserController::class, 'login']);
+    Route::post('/forgot-password', [UserController::class, 'forgotPassword']);
+    Route::post('/reset-password', [UserController::class, 'resetPassword']);
 });
